--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,7 @@ dist.jar=${dist.dir}/TeaELI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-<<<<<<< HEAD
-=======
-file.reference.rs2xml.jar=lib\\rs2xml.jar
->>>>>>> fba8e50595e466a0938028d8bf374ad544ee29a1
-file.reference.rs2xml.jar-1=dist\\lib\\rs2xml.jar
+file.reference.rs2xml.jar-1=lib\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
