alternative for refresh button tested

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,10 @@ dist.jar=${dist.dir}/TeaELI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.rs2xml.jar-1=lib\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.rs2xml.jar-1}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
