--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-1=swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
