--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/TeaELI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.8.jar=C:\\Users\\Janith\\Documents\\itextpdf-5.5.8.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.itextpdf-5.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
