--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.8.jar-1=itextpdf-5.5.8.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=dist\\sqlite-jdbc-3.8.11.2.jar
 file.reference.swingx-all-1.6.4.jar=swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.5.8.jar}:\
     \# Space-separated list of extra javac options:\
     ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.itextpdf-5.5.8.jar-1}
+    ${file.reference.itextpdf-5.5.8.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
